[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/AbyssinicaSIL-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://nodes/HintPanelEnemy.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/enemy_stats.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/enemy_popup.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/red_line.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/birchstd.OTF" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/enemy_ability.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/AnnapurnaSIL-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=7]
size = 27
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 69
outline_size = 3
extra_spacing_char = -1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=10]
size = 52
outline_size = 3
outline_color = Color( 0.505882, 0.121569, 0.0588235, 1 )
extra_spacing_char = -1
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_color = Color( 0.184314, 0.152941, 0.215686, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 3
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]
size = 27
outline_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
font_data = ExtResource( 1 )

[node name="HintPanelEnemy" type="ColorRect"]
rect_pivot_offset = Vector2( 247, 88 )
script = ExtResource( 2 )

[node name="data" type="Label" parent="."]
margin_left = 21.0
margin_top = 86.0
margin_right = 576.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 7 )
text = "\"Un depredador bestial con colmillos afilados y un hambre insaciable de sangre.\""
valign = 1
autowrap = true

[node name="bg" type="TextureRect" parent="."]
margin_left = -81.0
margin_top = -22.0
margin_right = 643.0
margin_bottom = 369.0
mouse_filter = 2
texture = ExtResource( 4 )
expand = true

[node name="lb_name" type="Label" parent="."]
margin_left = 22.0
margin_top = 14.0
margin_right = 334.0
margin_bottom = 62.0
custom_colors/font_color = Color( 0.505882, 0.121569, 0.0588235, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 12 )
text = "VAMPIRO"
valign = 1
autowrap = true

[node name="stats" type="Control" parent="."]
margin_top = -13.0
margin_bottom = -13.0

[node name="hp" type="Sprite" parent="stats"]
position = Vector2( 294, 53 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )
hframes = 3

[node name="lb_hp" type="Label" parent="stats"]
margin_left = 240.0
margin_top = 26.0
margin_right = 295.0
margin_bottom = 92.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 10 )
text = "5"
align = 1
valign = 1
autowrap = true

[node name="mv" type="Sprite" parent="stats"]
position = Vector2( 391, 53 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )
hframes = 3
frame = 2

[node name="lb_mv" type="Label" parent="stats"]
margin_left = 339.0
margin_top = 29.0
margin_right = 398.0
margin_bottom = 89.0
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 10 )
text = "1"
align = 1
valign = 1
autowrap = true

[node name="dm" type="Sprite" parent="stats"]
position = Vector2( 495, 53 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 3 )
hframes = 3
frame = 1

[node name="lb_dm" type="Label" parent="stats"]
margin_left = 440.0
margin_top = 26.0
margin_right = 495.0
margin_bottom = 92.0
custom_colors/font_color = Color( 0.945098, 0.945098, 0.945098, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 10 )
text = "3"
align = 1
valign = 1
autowrap = true

[node name="l1" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 81.0
margin_right = 540.0
margin_bottom = 83.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="lb_desc" type="Label" parent="."]
margin_left = 21.0
margin_top = 86.0
margin_right = 576.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 7 )
text = "\"Un depredador bestial con colmillos afilados y un hambre insaciable de sangre.\""
valign = 1
autowrap = true

[node name="l2" type="TextureRect" parent="."]
margin_left = 25.0
margin_top = 193.0
margin_right = 540.0
margin_bottom = 195.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true

[node name="ability1" type="Control" parent="."]
margin_top = 15.0
margin_bottom = 15.0

[node name="ico" type="Sprite" parent="ability1"]
position = Vector2( 41, 211 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 7 )
hframes = 5
vframes = 2
frame = 1

[node name="lb_ab_name" type="Label" parent="ability1"]
margin_left = 31.0
margin_top = 186.0
margin_right = 378.0
margin_bottom = 239.0
custom_colors/font_color = Color( 0.207843, 0.552941, 0.741176, 1 )
custom_constants/line_spacing = -1
custom_fonts/font = SubResource( 11 )
text = "   FRENESI"
autowrap = true

[node name="lb_ab_desc" type="Label" parent="ability1"]
margin_left = 21.0
margin_top = 194.0
margin_right = 565.0
margin_bottom = 309.0
custom_colors/font_color = Color( 0.882353, 0.882353, 0.882353, 1 )
custom_fonts/font = SubResource( 5 )
text = "               Tiene un 30% de moverse un casillero extra en su turno.. un casillero extra en su turno.."
autowrap = true
